<?xml version="1.0" encoding="UTF-8"?>
<!--


##
## Copyright (c) 2021 Oracle and/or its affiliates.
## Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/


-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <modules>
        <module>okafka-config</module>
        <module>okafka-consumer</module>
        <module>okafka-producer</module>
    </modules>

    <packaging>pom</packaging>

    <groupId>com.oracle.developers.eventmesh.teq</groupId>
    <artifactId>oracle-developers-eventmesh-teq-samples</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Oracle Developers :: Event Mesh :: Database Messaging with TEQ :: Sample Projects</name>
    <description>Samples code for Developers using Spring Boot and Oracle Transactional Event Queues.
    </description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <java.version>11</java.version>
        <javax-annotation.version>1.3.2</javax-annotation.version>
        <spring-boot.version>2.6.3</spring-boot.version>
        <spring-core.version>5.3.15</spring-core.version>
        <maven-compiler-plugin.version>3.10.0</maven-compiler-plugin.version>
        <oracle-jdbc.version>21.5.0.0</oracle-jdbc.version>
        <avro.version>1.11.0</avro.version>
        <okafka.version>0.8</okafka.version>
    </properties>

    <!--
        Upgrade from Spring Boot 2.6.1 to 2.6.2
        Log4J2 Vulnerability and Spring Boot
        Ref: https://spring.io/blog/2021/12/10/log4j2-vulnerability-and-spring-boot
    -->

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.oracle.okafka</groupId>
                <artifactId>okafka</artifactId>
                <version>${okafka.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.developers.eventmesh.teq</groupId>
                <artifactId>oracle-developers-okafka-config</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-core</artifactId>
                <version>${spring-core.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-actuator</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.avro</groupId>
                <artifactId>avro</artifactId>
                <version>${avro.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-configuration-processor</artifactId>
                <version>${spring-boot.version}</version>
                <optional>true</optional>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${spring-boot.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.oracle.database.jdbc</groupId>
                <artifactId>ojdbc11</artifactId>
                <version>${oracle-jdbc.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.database.jdbc</groupId>
                <artifactId>ucp</artifactId>
                <version>${oracle-jdbc.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.database.security</groupId>
                <artifactId>oraclepki</artifactId>
                <version>${oracle-jdbc.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.database.security</groupId>
                <artifactId>osdt_core</artifactId>
                <version>${oracle-jdbc.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.database.security</groupId>
                <artifactId>osdt_cert</artifactId>
                <version>${oracle-jdbc.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.annotation</groupId>
                <artifactId>javax.annotation-api</artifactId>
                <version>${javax-annotation.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>